Closed
Bug 1324157
Opened 8 years ago
Closed 8 years ago
BlitFramebuffer compares dst depth/stencil formats against srcColorFormat
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: jgilbert, Assigned: jgilbert)
References
Details
(Whiteboard: gfx-noted)
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
cleu
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
This causes BlitFramebuffer with COLOR|DEPTH to fail, for instance.
Assignee | ||
Updated•8 years ago
|
Blocks: webgl2-blockers
Assignee | ||
Updated•8 years ago
|
Summary: BlitFramebuffer compares src depth/stencil formats against dstColorFormat → BlitFramebuffer compares dst depth/stencil formats against srcColorFormat
Comment hidden (mozreview-request) |
Assignee | ||
Updated•8 years ago
|
Attachment #8819485 -
Flags: review?(cleu)
Comment 2•8 years ago
|
||
mozreview-review |
Comment on attachment 8819485 [details]
Bug 1324157 - Check dst colorDrawBuffers against src in BlitFramebuffer. -
https://reviewboard.mozilla.org/r/99238/#review99576
Attachment #8819485 -
Flags: review?(cleu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/78aafdccfc44
Check dst colorDrawBuffers against src in BlitFramebuffer. - r=lenzak800
Assignee | ||
Comment 4•8 years ago
|
||
Comment 5•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee | ||
Updated•8 years ago
|
Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8819485 [details]
Bug 1324157 - Check dst colorDrawBuffers against src in BlitFramebuffer. -
Approval Request Comment
[Feature/Bug causing the regression]: webgl2
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:
Attachment #8819485 -
Flags: approval-mozilla-beta?
Attachment #8819485 -
Flags: approval-mozilla-aurora?
Comment 7•8 years ago
|
||
Comment on attachment 8819485 [details]
Bug 1324157 - Check dst colorDrawBuffers against src in BlitFramebuffer. -
Fix a WebGL 2 related issue. Beta51+ and Aurora52+. Should be in 51 beta 10.
Attachment #8819485 -
Flags: approval-mozilla-beta?
Attachment #8819485 -
Flags: approval-mozilla-beta+
Attachment #8819485 -
Flags: approval-mozilla-aurora?
Attachment #8819485 -
Flags: approval-mozilla-aurora+
Assignee | ||
Comment 8•8 years ago
|
||
Assignee | ||
Comment 9•8 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•